logs/dag_id=spotify_etl_pipeline/run_id=scheduled__2025-09-12T04:00:00+00:00/task_id=gold_transform/attempt=2.log
[2025-09-12T05:05:31.031+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-12T04:00:00+00:00 [queued]>
[2025-09-12T05:05:31.038+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-12T04:00:00+00:00 [queued]>
[2025-09-12T05:05:31.039+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 2
[2025-09-12T05:05:31.059+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_transform> on 2025-09-12 04:00:00+00:00
[2025-09-12T05:05:31.069+0000] {standard_task_runner.py:57} INFO - Started process 23072 to run task
[2025-09-12T05:05:31.075+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_etl_pipeline', 'gold_transform', 'scheduled__2025-09-12T04:00:00+00:00', '--job-id', '267', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmpdeystzkr']
[2025-09-12T05:05:31.079+0000] {standard_task_runner.py:85} INFO - Job 267: Subtask gold_transform
[2025-09-12T05:05:31.128+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-12T04:00:00+00:00 [running]> on host 0d0cd054d690
[2025-09-12T05:05:31.435+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-12T04:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-09-12T04:00:00+00:00'
[2025-09-12T05:05:31.448+0000] {logging_mixin.py:151} INFO - Executed sql/gold/listening_history/fact_listening_history.sql
[2025-09-12T05:05:31.451+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "FROM"
LINE 12: FROM silver.spotify_songs
         ^

[2025-09-12T05:05:31.458+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=spotify_etl_pipeline, task_id=gold_transform, execution_date=20250912T040000, start_date=20250912T050531, end_date=20250912T050531
[2025-09-12T05:05:31.466+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 267 for task gold_transform (syntax error at or near "FROM"
LINE 12: FROM silver.spotify_songs
         ^
; 23072)
[2025-09-12T05:05:31.511+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-12T05:05:31.528+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
